# chess-moves-to-text-encoder

./: main.py  pyproject.toml
backend/: decode.py  encode.py
tests/: test_decode.py  test_encoder.py
