[project]
name = "chess-moves-to-text-encoder"
version = "0.1.0"
description = "Turn text into valid chess games."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

prod = [
]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

[tool.ruff.format]
# Use single quotes when formatting.
quote-style = "single"
